<?xml version="1.0" encoding="utf-8"?>
<!-- ChatGPT usage: Partial -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostActivity">

    <!--    Used this website for reference: https://www.notesjam.com/2022/08/cardview-android-kotlin.html-->
    <androidx.cardview.widget.CardView
        android:id="@+id/post_card"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#E6E6E6"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/post_user"
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/post_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="TextView"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <ScrollView
                android:layout_width="352dp"
                android:layout_height="55dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/post_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@color/black" />
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_thumb_up_off_alt_24" />

                <TextView
                    android:id="@+id/number_of_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@android:color/darker_gray" />

                <ImageButton
                    android:id="@+id/comment_button"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_comment_24" />

                <TextView
                    android:id="@+id/number_of_comments"
                    android:layout_width="6dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textColor="@android:color/darker_gray" />
                <ImageButton
                    android:id="@+id/report_button"
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_report_gmailerrorred_24" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/commentMessage"
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:hint="Type your message"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/create_forum_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit" />
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/comments_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:id="@+id/allComments"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:layout_marginTop="10dp"
            android:foregroundGravity="bottom">

            <LinearLayout
                android:id="@+id/commentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>