<?xml version="1.0" encoding="utf-8"?>
<!-- ChatGPT usage: Partial -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Create Forum"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_forum_name"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:hint="@string/forum_name" />

    <Spinner
        android:id="@+id/name_of_course"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:id="@+id/course_code"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/create_forum_button"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_gravity="end"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="10dp"
        android:text="Create" />

</LinearLayout>