...
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/postMessage"
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:hint="Type your message"
            android:inputType="textMultiLine" />

...
