...
                        android:id="@+id/joinedForums"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="bottom">

                        <LinearLayout
                            android:id="@+id/forum_layout_joined"
                            android:layout_width="match_parent"
                            android:layout_height="430dp"
                            android:orientation="vertical" />
                    </ScrollView>
    <!--            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

...
