<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/SearchCoursesButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Search Courses"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.28"
        android:layout_centerHorizontal="true"
        android:onClick="searchCourses"
        />

    <Button
        android:id="@+id/CompareCoursesButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Compare Courses"
        app:layout_constraintTop_toBottomOf="@+id/SearchCoursesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.28"
        android:onClick="compareCourse"
        />

    <Button
        android:id="@+id/RecommenderButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Recommender"
        app:layout_constraintTop_toBottomOf="@+id/CompareCoursesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.28"
        />

    <include
        layout="@layout/bottom_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>