...
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="submit_button">Submit</string>
    <string-array name="majors_array">
        <item>Select a Major</item>
        <item>"Ancient Mediterranean and Near Eastern Studies"</item>
        <item>"Anthropology"</item>
        <item>"Applied Animal Biology"</item>
        <item>"Archaeology"</item>
        <item>"Architecture"</item>
        <item>"Architecture, Landscape Architecture, and Urbanism"</item>
        <item>"Art History"</item>
        <item>"Asian Area Studies"</item>
...
